[mojo-edk] Prevent AcceptIncomingMessages flushing aggressively

Changes AcceptIncomingMessages to only flush the incoming
message queue once synchronously. This prevents deadlock cycles
that can block incoming external messages by spinning the IO
thread indefinitely. It also prevents similar cycles from
chewing up CPU on other threads.

Also fixes some Watcher tests that are broken by
ProcessIncomingMessages behavior. This change made the
brokenness more apparent.

BUG=628492
R=amistry@chromium.org

Review-Url: https://codereview.chromium.org/2153733002
Cr-Commit-Position: refs/heads/master@{#405776}

Former-commit-id: 5cdb85fdae4f9f9487d67d080b794ca633219303